# libtaco

./: .clang-format  .editorconfig  .gitignore  .gitmodules  LICENSE  meson.build  meson_options.txt
.github/: cc.json
.github/workflows/: build.yml  format.yml
include/: meson.build  taco.h  taiko.h
include/private/: alloc.h  config.h.in  course.h  courseset.h  io.h  meson.build  note.h  parser.h  section.h
include/private/tja/: branched.h  branchtype.h  coursebody.h  events.h  metadata.h  parser.h  postproc.h  segment.h  shiftjis.h  timestamp.h
src/: alloc.c  course.c  courseset.c  io.c  meson.build  note.c  parser.c  section.c
src/debug/: debug.c  meson.build
src/tja/: balloon.c  branched.c  branchtype.c  coursebody.c  enums.c  events.c  meson.build  metadata.c  parser.c  pass_annotate.c  pass_barlines.c  pass_check_branches.c  pass_checkpoint_rolls.c  pass_cleanup.c  pass_compile_branches.c  pass_convert_time.c  pass_prepend_bpm.c  segment.c  shiftjis.c  shiftjis.iconv.c  shiftjis.simdutf.cc  timestamp.c  tja.l  tja.y
tests/: main.c  meson.build
tests/core/: core.c  course.c  meson.build  note.c  section.c
tests/tja/: events.c  meson.build  parser.c  segment.c  tja.c
tests/tja/assets/: .editorconfig  .gitattributes  badbranch.tja  badmeasure.tja  badroll.tja  badroll.txt  balloon.tja  balloon.txt  basic.tja  basic.txt  bom.tja  branch.tja  branch_a.txt  branch_m.txt  branch_n.txt  checkpoint.tja  checkpoint.txt  commands.tja  commands.txt  delay.tja  delay.txt  div0.tja  division.tja  division.txt  double.tja  double_l.txt  double_r.txt  emptymeasures.tja  emptymeasures.txt  eof.tja  hand.tja  hand.txt  label.tja  label.txt  measures.tja  measures.txt  multiple.tja  notesdesigner.tja  opentaiko_ext.tja  opentaiko_ext.txt  (+4 more)
tests/utils/: meson.build  tacoassert.c  tacoassert.h  temp.h
tests/utils/unix/: meson.build  temp.c
tests/utils/windows/: temp.c
utils/: meson.build
utils/common/: getopt.c  getopt.h  getopt_long.c  meson.build
utils/tacoscore/: ac16.c  calc.c  calc.h  main.c  meson.build  score_ac15.c  score_ac16.c
